<resources>
    <string name="app_name">HW02</string>
    <string name="search_bar_value" />
    <string name="seek_bar_tv_default">Limit: 10</string>
    <string name="reset_button_value">Reset</string>
    <string name="search_button_value">Search</string>
    <string name="search_bar_hint">Search Term</string>
    <string name="sortby_label">Sort by:</string>
    <string name="price_text_label">Price</string>
    <string name="date_text_label">Date</string>
    <string name="result_label">Results</string>
    <string name="finish_label">Finish</string>
    <string name="track_label">Track:</string>
    <string name="genre_label">Genre:</string>
    <string name="artist_label">Artist:</string>
    <string name="album_label">Album:</string>
    <string name="track_price_label">Track Price:</string>
    <string name="album_price_label">Album Price:</string>
</resources>
